fixed bug where login page writeup was overflowing

--- a/app/assets/stylesheets/access.scss
+++ b/app/assets/stylesheets/access.scss
@@ -316,27 +316,27 @@ div.entry-tooltip-temporary span {
 
 @media only screen and (max-width: 1600px) and (min-width: 1501px){
   div.title {font-size: 1142.8%;}
-  div.writeup, span {font-size: 150%;}
+  div.writeup, span {font-size: 145%;}
 }
 
 @media only screen and (max-width: 1700px) and (min-width: 1601px){
   div.title {font-size:1214%;}
-  div.writeup, span {font-size: 150%;}
+  div.writeup, span {font-size: 145%;}
 }
 
 @media only screen and (max-width: 1800px) and (min-width: 1701px){
   div.title {font-size: 1286%;}
-  div.writeup, span {font-size: 150%;}
+  div.writeup, span {font-size: 145%;}
 }
 
 @media only screen and (max-width: 1900px) and (min-width: 1801px){
   div.title {font-size: 1357%;}
-  div.writeup, span {font-size: 150%;}
+  div.writeup, span {font-size: 145%;}
 }
 
 @media only screen and (min-width: 1901px){
   div.title {font-size: 1429%;}
-  div.writeup, span{font-size: 150%;}
+  div.writeup, span{font-size: 145%;}
 }
 
 
